2005-04-20  Christian Stimming <stimming@tuhh.de>

	* doc/mainpage.doxygen.in: Added doxygen mainpage that will also
	be used as the new web page. Improved documentation all over the
	place.
	
	* src/python/ktoblzcheck.py: Added Andreas' python module for
	accessing ktoblzcheck. This is enabled by --enable-python.

	* src/lib/iban_check.cc: Add test program. Prepare "make check"
	rules for using the test program.
	
	* src/include/iban.h, src/lib/iban.cc: Add const where applicable.

2005-04-19  Andreas Degert  <ad@papyrus-gmbh.de>

	* src/bin/ibanchk.cc: work with new interface, use streams instead
	of stdio, accept IBAN as command line argument.

	* src/include/iban.h, src/lib/iban.cc: new interface and
	implementation.

	* src/bankdata/ibandata.txt: data file describing IBAN format.

2005-04-11  Christian Stimming <stimming@tuhh.de>

	* src/include/iban.h, src/lib/iban.cc: Add C wrappers to iban and
	added warning about potential code problems there.

2005-04-07  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Make sure the account-id is not too
	long.

2005-03-17  Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.4 -sigh- because of the
	installation problem with SED.

	* src/bankdata/bundesbank.sed.in: Use the SED variable from
	configure time instead of fixed path.

2005-03-01  Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.3

	* src/bankdata/bankdata.txt: Updated bankdata file, now valid from
	2005-03-05 onwards.

	* src/bankdata/online_update.pl.in, README: Add perl script for
	automated download of updated bankdata files.

2005-01-24  Christian Stimming <stimming@tuhh.de>

	* src/bin/ktoblzcheck.cc: Add file-based batch processing, by
	Michael Plugge <m.plugge@fh-mannheim.de>

2005-01-21  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Optimized the file reading functions
	quite a bit, so that it runs 25% faster. Gee, this pays off.
